apps/dask-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dask-gateway-ingress
spec:
  ingressClassName: public
  rules:
    - host: dask-gateway.geddes.rcac.purdue.edu
      http:
        paths:
          - backend:
              service:
                name: traefik-dask-gateway
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
